Added support of Apache Arrow format to QuerySession